v1.2.3
- Version ready to be deployed in maven central
- All javadoc errors fixed
- Added javadoc plugin. API generated and mainted in gh-pages branch
- Fixed more JUNit tests errors in lists with jdk 7
v1.2.2
- Fixed maven errors with unmappable character for encoding UTF8
- Fixed compilation erros of JUnnit tests in openjdk 7 
- Fixed error in MP_Reach_Attribute 
v1.2.1
- Make JUnit tests compatible with java 1.7
- JUnit tests for PCEP Constructs
- Added coding of REQ_ADAP_CAP from draft-ietf-pce-gmpls-pcep-extensions-11
- Deleted old SRERO objects (no longer used)
- Added encoding of REQ_MISSING_TLV
- BGP-LS Path Attribute: Next Hop Address IPv4 encoding added
- Update to https://tools.ietf.org/html/draft-ietf-pce-segment-routing-06
- Bugfixes 
v1.2
- Added JUnit tests for PCEP (still to be fully completed)
- Bugfixes
- New experimental objects
v1.1.1
- Added DataPathID Class
v1.1.0 
- Add support of DataPathID
- Updated codes for draft-ietf-pce-stateful-pce-11
- Removed Delegation Parameters TLVs (removed in stateful pce draft since version -03)
- Removed unused propiertary TLVs
- Updated documentation on protocol support
v1.0.1
- Support for Generalized Bandwidth (draft-ietf-pce-gmpls-pcep-extensions-09)
- Bugfixes
v1.0.0
First Release