@@ -82,4 +82,29 @@ public class UndirectionalDelayVariationDescriptorSubTLV extends BGP4TLVFormat{
 		return "UndirectionalDelayVariation [delay_ms=" + delayVar + "]";
 	}
 
+
+	@Override
+	public int hashCode() {
+		final int prime = 31;
+		int result = super.hashCode();
+		result = prime * result + delayVar;
+		return result;
+	}
+
+
+	@Override
+	public boolean equals(Object obj) {
+		if (this == obj)
+			return true;
+		if (!super.equals(obj))
+			return false;
+		if (getClass() != obj.getClass())
+			return false;
+		UndirectionalDelayVariationDescriptorSubTLV other = (UndirectionalDelayVariationDescriptorSubTLV) obj;
+		if (delayVar != other.delayVar)
+			return false;
+		return true;
+	}
+	
+
 }
